force-app/main/default/objects/Nacha_Entry_Return__c/fields/Company_Id__c.field-meta.xml
<CustomField>
    <fullName>Company_Id__c</fullName>
    <label>Company Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>