force-app/main/default/objects/Nacha_Entry_Return__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Event Type</label>
    <length>200</length>
    <type>Text</type>
</CustomField>