force-app/main/default/objects/Nacha_Entry_Return__c/fields/First_Debit_Failure_Nacha__c.field-meta.xml
<CustomField>
    <fullName>First_Debit_Failure_Nacha__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Debit Failure Nacha</label>
    <type>Checkbox</type>
</CustomField>