force-app/main/default/objects/Nacha_Entry_Return__c/fields/Processing_State__c.field-meta.xml
<CustomField>
    <fullName>Processing_State__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Processing State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>